syntax = "proto3";
package prismfinance.prismcore.mint;

import "gogoproto/gogo.proto";
import "prismcore/mint/minter.proto";
import "prismcore/mint/params.proto";

option go_package = "github.com/prism-finance/prism-core/x/mint/types";

message EventMint {
  Minter minter = 1 [(gogoproto.nullable) = false];
  string bonded_ratio = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string total_minted = 3;
  DistributionProportions distributed_amounts = 4  [(gogoproto.nullable) = false];
  int64 epoch_number = 5;
}